did a bunch of stuff for Posts

--- a/indgte/indgte-webapp/src/main/webapp/WEB-INF/messages.properties
+++ b/indgte/indgte-webapp/src/main/webapp/WEB-INF/messages.properties
@@ -4,6 +4,16 @@ home.status.postfb = Also post this to Facebook
 business.profile.profilepic.upload.title = Upload the Profile Pic for 
 business.profile.profilepic.upload.button = Upload!
 business.profile.profilepic.upload.cancel = Cancel
+business.profile.coverpic.upload.title = Upload the Cover pic for 
+business.profile.coverpic.upload.button = Upload!
+business.profile.coverpic.upload.cancel = Cancel
+business.profile.tabs.feed = Feed
+business.profile.tabs.products = Products
+business.profile.tabs.reviews = Reviews
+business.profile.tabs.comments = Comments
+business.newpost.postingas = Posting as:
+business.newpost.title = Post title:
+business.newpost.buttontext = Post
 
 businesses.nobusiness = You have no businesses registered you poor man
 businesses.register = Register a Business
