--- a/indgte/indgte-webapp/src/main/webapp/WEB-INF/messages_en_PH.properties
+++ b/indgte/indgte-webapp/src/main/webapp/WEB-INF/messages_en_PH.properties
@@ -1,9 +1,19 @@
 home.status.textarea = Unsa ka kaguol karong adlawa?
 home.status.postfb = I-post pud ni sa Facebook
 
-business.profile.profilepic.upload.title = Magpadala ug litrato para sa  
+business.profile.profilepic.upload.title = Magpadala ug litrato para ni 
 business.profile.profilepic.upload.button = Ipadala!
 business.profile.profilepic.upload.cancel = Ayaw nalang
+business.profile.coverpic.upload.title = Magpadala ug litrato para sa tabon ni 
+business.profile.coverpic.upload.button = Ipadala!
+business.profile.coverpic.upload.cancel = Ayaw nalang
+business.profile.tabs.feed = Yawyaw
+business.profile.tabs.products = Produkto
+business.profile.tabs.reviews = Libak
+business.profile.tabs.comments = Saway
+business.newpost.postingas = Ang ngalan sa nagpost:
+business.newpost.title = Titulo:
+business.newpost.buttontext = Iplastar
 
 businesses.nobusiness = Wala kay negosyo nga nakarehistro. Intawon.
 businesses.register = Rehistro ug negosyo
