Mostly stuff for product-level administration

--- a/indgte/indgte-webapp/src/main/webapp/WEB-INF/messages.properties
+++ b/indgte/indgte-webapp/src/main/webapp/WEB-INF/messages.properties
@@ -1,3 +1,7 @@
+generics.upload = Upload
+generics.cancel = Cancel
+generics.done = Done
+
 home.status.textarea = How sad are you today?
 home.status.postfb = Also post this to Facebook
 
@@ -14,6 +18,21 @@ business.profile.tabs.comments = Comments
 business.newpost.postingas = Posting as:
 business.newpost.title = Post title:
 business.newpost.buttontext = Post
+business.newcategory.link = Create Category
+business.newcategory.title = Create new Category for {0} products or services
+
+category.title = {0} | {1}
+category.mainpic.upload.title = Upload the main picture for 
+category.mainpic.upload.button = Upload!
+category.mainpic.upload.cancel = Cancel
+category.newproduct.title = Create a new Product for {0}
+category.newproduct.save = Save
+category.newproduct.cancel = Cancel
+
+product.title = {0} | {1}
+product.addphoto.title = Add a new photo for {0}
+product.dropbox.message = Drop photos here
+product.dropbox.orclick = Or click here
 
 businesses.nobusiness = You have no businesses registered you poor man
 businesses.register = Register a Business
