--- a/indgte/indgte-webapp/src/main/webapp/WEB-INF/messages_en_PH.properties
+++ b/indgte/indgte-webapp/src/main/webapp/WEB-INF/messages_en_PH.properties
@@ -1,3 +1,7 @@
+generics.upload = Ipadala
+generics.cancel = Ayaw nalang
+generics.done = Human na
+
 home.status.textarea = Unsa ka kaguol karong adlawa?
 home.status.postfb = I-post pud ni sa Facebook
 
@@ -14,6 +18,20 @@ business.profile.tabs.comments = Saway
 business.newpost.postingas = Ang ngalan sa nagpost:
 business.newpost.title = Titulo:
 business.newpost.buttontext = Iplastar
+business.newcategory.link = Himog Bag-ong Kategorya
+business.newcategory.title = Himo ug bag-ong Kategorya para sa mga produkto ug serbisyo sa {0}
+
+category.mainpic.upload.title = Ipadala ang nawong sa 
+category.mainpic.upload.button = Ipadala!
+category.mainpic.upload.cancel = Ayaw nalang
+category.newproduct.title = Himo ug bag-ong Produkto para sa {0}
+category.newproduct.save = Isalbar
+category.newproduct.cancel = Ayaw nalang
+
+product.title = {0} | {1}
+product.addphoto.title = Puno ug mga bag-ong litrato para sa {0}
+product.dropbox.message = Ihulog ang mga litrato diri
+product.dropbox.orclick = O pitki diri
 
 businesses.nobusiness = Wala kay negosyo nga nakarehistro. Intawon.
 businesses.register = Rehistro ug negosyo
