Mostly product editing

--- a/indgte/indgte-webapp/src/main/webapp/WEB-INF/messages.properties
+++ b/indgte/indgte-webapp/src/main/webapp/WEB-INF/messages.properties
@@ -1,6 +1,25 @@
-generics.upload = Upload
+# Regarding args: usually {0} = category name and {1} = business domain
+# Exceptions to this rule will be explicitly indicated in comments
+
+
 generics.cancel = Cancel
+generics.category = Category
+generics.delete = Delete
+generics.description = Description
 generics.done = Done
+generics.edit = Edit
+generics.hide = Hide
+generics.nodescription = No description
+generics.notitle = No title
+generics.promote = Promote
+generics.provider = Provider
+generics.title = Title
+generics.truncated.seebelow = (truncated due to length, see full text below)
+generics.upload = Upload
+
+generics.forms.name = Name
+generics.forms.description = Description
+generics.forms.submit = Isubmita
 
 home.status.textarea = How sad are you today?
 home.status.postfb = Also post this to Facebook
@@ -30,9 +49,20 @@ category.newproduct.save = Save
 category.newproduct.cancel = Cancel
 
 product.title = {0} | {1}
-product.addphoto.title = Add a new photo for {0}
+product.addphotos.button = Add Pics
+product.addphotos.title = Add new pictures for {0}
 product.dropbox.message = Drop photos here
 product.dropbox.orclick = Or click here
+
+product.edit.title = Editing {0}
+product.edit.formtitle = Editing {0}
+product.edit.photos.title = Manage Pics
+product.edit.photos.edit = Edit this picture
+product.edit.photos.hide = Hide this picture
+product.edit.photos.delete = Delete this picture
+product.edit.photos.edithelp = Change title or description. MAYBE in the future draw stuff
+product.edit.photos.hidehelp = Hide this picture from other users
+product.edit.photos.deletehelp = Permanently delete this picture
 
 businesses.nobusiness = You have no businesses registered you poor man
 businesses.register = Register a Business
