--- a/indgte/indgte-webapp/src/main/webapp/WEB-INF/messages_en_PH.properties
+++ b/indgte/indgte-webapp/src/main/webapp/WEB-INF/messages_en_PH.properties
@@ -1,6 +1,17 @@
+# Regarding args: usually {0} = category name and {1} = business domain
+# Exceptions to this rule will be explicitly indicated in comments
+ 
 generics.upload = Ipadala
 generics.cancel = Ayaw nalang
 generics.done = Human na
+generics.edit = Hilabti
+generics.promote = Ibaligya
+generics.category = Kategorya
+generics.provider = Gabaligya
+generics.truncated.seebelow = (gi putol kay taas, tan-awa nalang sa ubos ang tibuok)
+
+generics.forms.name = Ngalan
+generics.forms.description = Batbat
 
 home.status.textarea = Unsa ka kaguol karong adlawa?
 home.status.postfb = I-post pud ni sa Facebook
@@ -21,6 +32,7 @@ business.newpost.buttontext = Iplastar
 business.newcategory.link = Himog Bag-ong Kategorya
 business.newcategory.title = Himo ug bag-ong Kategorya para sa mga produkto ug serbisyo sa {0}
 
+category.title = {0} | {1}
 category.mainpic.upload.title = Ipadala ang nawong sa 
 category.mainpic.upload.button = Ipadala!
 category.mainpic.upload.cancel = Ayaw nalang
@@ -29,9 +41,13 @@ category.newproduct.save = Isalbar
 category.newproduct.cancel = Ayaw nalang
 
 product.title = {0} | {1}
-product.addphoto.title = Puno ug mga bag-ong litrato para sa {0}
+product.addphotos.button = Dugangi ug Litrato
+product.addphotos.title = Puno ug mga bag-ong litrato para sa {0}
 product.dropbox.message = Ihulog ang mga litrato diri
 product.dropbox.orclick = O pitki diri
+
+product.edit.title = Nanghilabot sa {0}
+product.edit.formtitle = Hilabti ang mga kabutangan sa {0}
 
 businesses.nobusiness = Wala kay negosyo nga nakarehistro. Intawon.
 businesses.register = Rehistro ug negosyo
