--- a/indgte/indgte-webapp/src/main/webapp/WEB-INF/messages.properties
+++ b/indgte/indgte-webapp/src/main/webapp/WEB-INF/messages.properties
@@ -59,9 +59,11 @@ product.edit.formtitle = Editing {0}
 product.edit.photos.title = Manage Pics
 product.edit.photos.edit = Edit this picture
 product.edit.photos.hide = Hide this picture
+product.edit.photos.show = Unhide this picture
 product.edit.photos.delete = Delete this picture
 product.edit.photos.edithelp = Change title or description. MAYBE in the future draw stuff
 product.edit.photos.hidehelp = Hide this picture from other users
+product.edit.photos.showhelp = Make this photo visible to other users
 product.edit.photos.deletehelp = Permanently delete this picture
 
 businesses.nobusiness = You have no businesses registered you poor man
