--- a/indgte/indgte-webapp/src/main/webapp/WEB-INF/messages.properties
+++ b/indgte/indgte-webapp/src/main/webapp/WEB-INF/messages.properties
@@ -39,6 +39,7 @@ business.newpost.title = Post title:
 business.newpost.buttontext = Post
 business.newcategory.link = Create Category
 business.newcategory.title = Create new Category for {0} products or services
+business.nolatlng = Sadly, {0} has not specified their location on the Map. This is their provided address:
 
 category.title = {0} | {1}
 category.mainpic.upload.title = Upload the main picture for 
