--- a/indgte/indgte-webapp/src/main/webapp/WEB-INF/messages_en_PH.properties
+++ b/indgte/indgte-webapp/src/main/webapp/WEB-INF/messages_en_PH.properties
@@ -1,14 +1,22 @@
 # Regarding args: usually {0} = category name and {1} = business domain
 # Exceptions to this rule will be explicitly indicated in comments
- 
-generics.upload = Ipadala
+
 generics.cancel = Ayaw nalang
+generics.category = Kategorya
+generics.delete = Tangtanga
+generics.description = Deskripsyon
 generics.done = Human na
 generics.edit = Hilabti
+generics.hide = Tago-i
+generics.nodescription = Walay deskripsyon
+generics.notitle = Walay Titulo
 generics.promote = Ibaligya
-generics.category = Kategorya
-generics.provider = Gabaligya
-generics.truncated.seebelow = (gi putol kay taas, tan-awa nalang sa ubos ang tibuok)
+generics.provider = Tag-iya
+generics.remove = Tangtanga
+generics.save = Salbara
+generics.title = Titulo
+generics.truncated.seebelow = (taas kaayo, naas ubos ang tibuok)
+generics.upload = Ipadala
 
 generics.forms.name = Ngalan
 generics.forms.description = Batbat
