--- a/indgte/indgte-webapp/src/main/webapp/WEB-INF/messages.properties
+++ b/indgte/indgte-webapp/src/main/webapp/WEB-INF/messages.properties
@@ -1,7 +1,6 @@
 # Regarding args: usually {0} = category name and {1} = business domain
 # Exceptions to this rule will be explicitly indicated in comments
 
-
 generics.cancel = Cancel
 generics.category = Category
 generics.delete = Delete
@@ -13,6 +12,8 @@ generics.nodescription = No description
 generics.notitle = No title
 generics.promote = Promote
 generics.provider = Provider
+generics.remove = Remove
+generics.save = Save
 generics.title = Title
 generics.truncated.seebelow = (truncated due to length, see full text below)
 generics.upload = Upload
@@ -20,6 +21,9 @@ generics.upload = Upload
 generics.forms.name = Name
 generics.forms.description = Description
 generics.forms.submit = Isubmita
+
+generics.imageupload.title = Image upload
+generics.imageupload.dropbox.message = Drop photo here or click
 
 home.status.textarea = How sad are you today?
 home.status.postfb = Also post this to Facebook
@@ -69,3 +73,5 @@ product.edit.photos.deletehelp = Permanently delete this picture
 
 businesses.nobusiness = You have no businesses registered you poor man
 businesses.register = Register a Business
+
+toptens.head.message = Don't agree with the list? Vote for an existing item you think should be ranked higher or add a new item for others to vote on.
