--- a/indgte/indgte-webapp/src/main/webapp/WEB-INF/messages.properties
+++ b/indgte/indgte-webapp/src/main/webapp/WEB-INF/messages.properties
@@ -75,3 +75,5 @@ businesses.nobusiness = You have no businesses registered you poor man
 businesses.register = Register a Business
 
 toptens.head.message = Don't agree with the list? Vote for an existing item you think should be ranked higher or add a new item for others to vote on.
+
+watchedtags.empty = It looks like you're not watching any tags. Watching tags is a good way to keep track of the latest developments on products you're interested in. Please read <a href="{0}">the FAQ section</a> to learn more.
