--- a/indgte/indgte-webapp/src/main/webapp/WEB-INF/messages.properties
+++ b/indgte/indgte-webapp/src/main/webapp/WEB-INF/messages.properties
@@ -96,5 +96,6 @@ manage.header = Manage Account
 
 search.placeholder = Search for stuff in Dumaguete
 
+promote.dialog.comp = Select dates to see a computation of coconut costs
 post.promote.dialog = You currently have {0} coconuts and can promote this post for a maximum of {0} days.
-post.promote.dialog.comp = Select dates to see a computation of coconut costs
+entity.promote.dialog = You currently have {0} coconuts and can promote <strong>{2}</strong> for a maximum of {1} days.
