--- a/indgte/indgte-webapp/src/main/webapp/WEB-INF/messages.properties
+++ b/indgte/indgte-webapp/src/main/webapp/WEB-INF/messages.properties
@@ -36,6 +36,7 @@ anon.topten.newcandidate=Please <a href="/login/">login</a> to add a new candida
 
 home.status.textarea = How sad are you today?
 home.status.postfb = Also post this to Facebook
+home.status.posttwitter = Also tweet this
 
 business.profile.noinfo = No detailed information for this business yet
 business.profile.profilepic.upload.title = Upload the Profile Pic for 
