--- a/indgte/indgte-webapp/src/main/webapp/WEB-INF/messages.properties
+++ b/indgte/indgte-webapp/src/main/webapp/WEB-INF/messages.properties
@@ -29,7 +29,7 @@ generics.forms.submit = Isubmita
 generics.imageupload.title = Image upload
 generics.imageupload.dropbox.message = Drop photo here or click
 
-anon.alert=You are browsing Indumaguete as an <strong>Anonymous</strong> user. Please <strong><a href="/login/">login</a></strong> to enjoy benefits such as creating your own page, voting in the top ten lists, among others. Please see the <strong><a href="/h/">Help section</a></strong> for more information.
+anon.alert=You are browsing Indumaguete as an <strong>Anonymous</strong> user. Please <strong><a href="/login/">login</a></strong> to enjoy benefits such as creating your own page, voting in the top ten lists, among others. Please see the <strong><a href="/etc/help/">Help section</a></strong> for more information.
 anon.review.react=Please <a href="/login/">login</a> to agree or disagree with this review
 anon.newpost=Please <a href="/login/">login</a> to create or filter posts
 anon.topten.newcandidate=Please <a href="/login/">login</a> to add a new candidate to this list
