--- a/indgte/indgte-webapp/src/main/webapp/WEB-INF/messages.properties
+++ b/indgte/indgte-webapp/src/main/webapp/WEB-INF/messages.properties
@@ -1,6 +1,8 @@
 # Regarding args: usually {0} = category name and {1} = business domain
 # Exceptions to this rule will be explicitly indicated in comments
 
+mod.warning = Enjoy your moderator powers. Don't be an asshole.
+
 generics.appearance = Appearance
 generics.background = Background
 generics.cancel = Cancel
