--- a/indgte/indgte-webapp/src/main/webapp/WEB-INF/messages.properties
+++ b/indgte/indgte-webapp/src/main/webapp/WEB-INF/messages.properties
@@ -62,7 +62,7 @@ category.title = {0} | {1}
 category.mainpic.upload.title = Upload the main picture for 
 category.mainpic.upload.button = Upload!
 category.mainpic.upload.cancel = Cancel
-category.newproduct.title = Create a new Product for {0}
+category.newproduct.title = Create a new Product for
 category.newproduct.save = Save
 category.newproduct.cancel = Cancel
 
