--- a/indgte/indgte-webapp/src/main/webapp/WEB-INF/messages_ceb_PH.properties
+++ b/indgte/indgte-webapp/src/main/webapp/WEB-INF/messages_ceb_PH.properties
@@ -49,7 +49,7 @@ category.title = {0} | {1}
 category.mainpic.upload.title = Ipadala ang nawong sa 
 category.mainpic.upload.button = Ipadala!
 category.mainpic.upload.cancel = Ayaw nalang
-category.newproduct.title = Himo ug bag-ong Produkto para sa {0}
+category.newproduct.title = Himo ug bag-ong Produkto para sa
 category.newproduct.save = Isalbar
 category.newproduct.cancel = Ayaw nalang
 
